<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <me.dm7.barcodescanner.zxing.ZXingScannerView
        android:id="@+id/scanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="4dp"
            android:text="@string/scanner_fed"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/number_fed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="40sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="4dp"
            android:text="@string/scanner_remained"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanner_vegetarian"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/number_vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:text="@string/zero"
            android:textSize="30sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanner_meat_eater"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/number_meat_eater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:text="@string/zero"
            android:textSize="30sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
