<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="30dp"
        android:background="#fff"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/btn_reload"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#fff"
                android:src="@drawable/ic_reload"
                android:visibility="gone"
                android:contentDescription="@string/loading_gif" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/btn_reloading"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#fff"
                android:src="@drawable/ic_reloading"
                android:visibility="visible" />
        </FrameLayout>

        <TextView
            android:id="@+id/error_massage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_error"
            android:textSize="15sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/count_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/name"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textStyle="bold"
            android:text="@string/volunteer"/>

        <TextView
            android:id="@+id/date"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/history_time"/>

        <TextView
            android:id="@+id/feed_type"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/sync"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/history_sync"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
